--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - redis
     links:
       - redis
+    ports:
+      - "8080:8080"
     environment:
       DEBUG: ${CSUST_BOT_DEBUG}
       TOKEN: ${CSUST_BOT_TOKEN}
