Update .travis: import make chains remove scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: go
 go: 1.14
 scripts:
-  - echo "Start build" && go get -v . && go build . && echo "Build Successful"
+  - make build
   - echo "Test Complete"
