--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
   redis:
     image: "redis:alpine"
     container_name: bot-redis
+    restart: always
     expose:
       - "6379"
     volumes:
