--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
   bot:
     build: .
     container_name: bot
+    logging:
+      driver: loki-driver
+      options:
+        loki-url: http://${LOKI_ADDR}:3100/loki/api/v1/push
     restart: always
     depends_on:
       - redis
@@ -21,6 +25,10 @@ services:
   redis:
     image: "redis:alpine"
     container_name: bot-redis
+    logging:
+      driver: loki-driver
+      options:
+        loki-url: http://${LOKI_ADDR}:3100/loki/api/v1/push
     restart: always
     expose:
       - "6379"
