--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     expose:
       - "6379"
     volumes:
-      - ./config/redis.conf:/usr/local/etc/redis/redis.conf
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
       - ./data:/data
     command:
       - /usr/local/etc/redis/redis.conf
