--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
-# debug mode
+# global config
 debug: false
+worker: 4
 
-# bot token
+# bot config
 token: ""
 rate_limit:
   # token bucket size, must [int]
