feat: more rate limit for command

--- a/config.yaml
+++ b/config.yaml
@@ -11,8 +11,10 @@ rate_limit:
   limit: 1
   # default cost every message [int]
   cost: 1
-  # cost of every sticker, this override default cost [int]
+  # cost of every sticker, sticker message use this cost [int]
   cost_sticker: 3
+  # cost of every command, command message use this cost [int]
+  cost_command: 2
 
 # redis config
 redis:
