--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 version: '3.8'
 
-x-log-driver: &log-driver
-logging:
-  driver: loki-driver
-  options:
-    loki-url: http://${LOKI_ADDR}:3100/loki/api/v1/push
+x-common: &common
+  logging:
+    driver: loki-driver
+    options:
+      loki-url: http://${LOKI_ADDR}:3100/loki/api/v1/push
+  restart: always
 
 services:
 
   bot:
     build: .
     container_name: bot
-    <<: *log-driver
+    <<: *common
     restart: always
     depends_on:
       - redis
@@ -23,12 +24,7 @@ services:
   redis:
     image: "redis:alpine"
     container_name: bot-redis
-    <<: *log-driver
-    logging:
-      driver: loki-driver
-      options:
-        loki-url: http://${LOKI_ADDR}:3100/loki/api/v1/push
-    restart: always
+    <<: *common
     expose:
       - "6379"
     volumes:
