--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -5,6 +5,18 @@ on:
     branches: [ dev ]
 
 jobs:
+  get-source:
+    name: "Checkout HEAD"
+    runs-on: ubuntu-latest
+    steps:
+      
+      - name: "Get source"
+        uses: actions/checkout@v2
+      
+      - name: "Print Version"
+        run: |
+          echo 'Version:' $(git branch --show-current)-$(git rev-parse --short HEAD)
+          
   docker_build:
     name: "build and push docker image"
     runs-on: ubuntu-latest
@@ -26,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: csust/csust-got:latest-test
+          tags: csust/csust-got:latest-dev
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
