--- a/.github/workflows/docker_push_release.yml
+++ b/.github/workflows/docker_push_release.yml
@@ -38,10 +38,9 @@ jobs:
         with:
           context: .
           push: true
-          repository: csust/csust-got
           tags: |
-            latest
-            ${{ steps.version.outputs.tag }}
+            csust/csust-got:latest
+            csust/csust-got:${{ steps.version.outputs.tag }}
           args: |
             TAG=${{ steps.version.outputs.tag}}
 
