--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -1,13 +1,14 @@
 name: Docker Image Push
 
 on:
-  release:
-    types: [ published ]
+  push:
+    branches: [ dev ]
+    
 
 jobs:
           
   docker_build:
-    name: "build and push docker image when release"
+    name: "build and push docker image"
     runs-on: ubuntu-latest
     steps:
       
@@ -15,10 +16,8 @@ jobs:
         uses: actions/checkout@v2
       
       - name: "Print Version"
-        id: version
         run: |
-          echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
-          echo "::set-output name=tag:: ${GITHUB_REF/refs\/tags\//}"
+          echo 'Version:' $(git branch --show-current)-$(git rev-parse --short HEAD)
           
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -39,10 +38,7 @@ jobs:
           context: .
           push: true
           tags: |
-            csust/csust-got:latest
-            csust/csust-got:${{ steps.version.outputs.tag }}
-          args: |
-            TAG=${{ steps.version.outputs.tag}}
+            csust/csust-got:latest-dev
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
