--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -2,7 +2,7 @@ name: Docker Image Push
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ dev, master ]
     
 
 jobs:
@@ -16,9 +16,11 @@ jobs:
         uses: actions/checkout@v2
       
       - name: "Print Version"
+        id: "version"
         run: |
-          echo 'Version:' $(git branch --show-current)-$(git rev-parse --short HEAD)
-          
+          echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
+          echo "::set-output name=branch::$(git branch --show-current)"
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -38,7 +40,7 @@ jobs:
           context: .
           push: true
           tags: |
-            csust/csust-got:latest-dev
+            csust/csust-got:latest-${{ steps.version.outputs.branch }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
