fix: loss branch info when release

--- a/.github/workflows/docker_push_release.yml
+++ b/.github/workflows/docker_push_release.yml
@@ -43,6 +43,7 @@ jobs:
             csust/csust-got:${{ steps.version.outputs.tag }}
           build-args: |
             TAG=${{ steps.version.outputs.tag }}
+            BRANCH=release
             RELEASE=release
 
       - name: Image digest
