--- a/config.yaml
+++ b/config.yaml
@@ -38,4 +38,4 @@ yiban_api: ""
 prometheus:
   enabled: false
   address: "prometheus:9090"
-  message_query: "topk(10, sum(rate(bot_message_count[24h])*(24*3600-5)) by (username))"
+  message_query: 'topk(10, sum(rate(bot_message_count[24h])*(24*3600-5)) by (username))'
