fix: fix yiban notified a lot

--- a/redis.conf
+++ b/redis.conf
@@ -163,7 +163,7 @@ pidfile /var/run/redis_6379.pid
 # verbose (many rarely useful info, but not a mess like the debug level)
 # notice (moderately verbose, what you want in production probably)
 # warning (only very important / critical messages are logged)
-loglevel verbose
+loglevel notice
 
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
@@ -217,7 +217,7 @@ always-show-logo yes
 
 save 900 1
 save 300 10
-save 60 1000
+save 60 100
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
@@ -536,7 +536,7 @@ requirepass csust-bot-redis-password
 # Once the limit is reached Redis will close all the new connections sending
 # an error 'max number of clients reached'.
 #
-maxclients 100000
+maxclients 1000
 
 ############################## MEMORY MANAGEMENT ################################
 
