--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -25,7 +25,10 @@ jobs:
         uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
+        id: setup-buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          install: true
 
       - name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -39,6 +42,7 @@ jobs:
         with:
           context: .
           push: true
+          platforms: ${{ steps.setup-buildx.outputs.platforms }}
           tags: |
             csust/csust-got:latest-${{ steps.version.outputs.branch }}
 
