--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
           echo "::set-output name=branch::$(git branch --show-current)"
-          echo "::set-output name=platforms::linux/arm/v7,linux/arm/v6,linux/arm/v7,linux/386,linux/amd64,linux/arm64"
+          echo "::set-output name=platforms::linux/arm/v7,linux/arm/v6,linux/arm64,linux/386,linux/amd64"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
