--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 x-common: &common
-  logging:
-    driver: loki-driver
-    options:
-      loki-url: http://${LOKI_ADDR}:3100/loki/api/v1/push
+  # logging:
+  #   driver: loki-driver
+  #   options:
+  #     loki-url: http://${LOKI_ADDR}:3100/loki/api/v1/push
   restart: always
 
 services:
 
   bot:
-    build: .
+    image: csust/csust-got
     container_name: bot
     <<: *common
     restart: always
