feat: update docker-compose

--- a/.github/workflows/docker_push_release.yml
+++ b/.github/workflows/docker_push_release.yml
@@ -48,3 +48,12 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+      - name: Docker Deployment
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          port: ${{ secrets.PORT }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: cd csust-got && docker-compose pull && docker-compose up -d
