--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 x-common: &common
   # logging:
-  #   driver: loki-driver
+  #   driver: loki
   #   options:
   #     loki-url: http://${LOKI_ADDR}:3100/loki/api/v1/push
   restart: always
@@ -20,8 +20,8 @@ services:
       - ./config.yaml:/app/config.yaml
     links:
       - redis
-    # ports:
-      # - "8080:8080"
+    ports:
+      - "7777:7777"
 
   redis:
     image: redis
