--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -3,24 +3,31 @@ name: Docker Image Push
 on:
   push:
     branches: [ dev, master ]
-    
 
 jobs:
-          
+
   docker_build:
     name: "build and push docker image"
     runs-on: ubuntu-latest
     steps:
-      
+
       - name: "Get source"
         uses: actions/checkout@v2
-      
+
       - name: "Print Version"
         id: "version"
         run: |
           echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
           echo "::set-output name=branch::$(git branch --show-current)"
           echo "::set-output name=platforms::linux/arm/v7,linux/arm/v6,linux/arm64,linux/386,linux/amd64"
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16'
+
+      - name: Get deps
+        run: go mod vendor
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
