--- a/.github/workflows/docker_push_release.yml
+++ b/.github/workflows/docker_push_release.yml
@@ -5,22 +5,30 @@ on:
     types: [ published ]
 
 jobs:
-          
+
   docker_build:
     name: "build and push docker image when release"
     runs-on: ubuntu-latest
     steps:
-      
+
       - name: "Get source"
         uses: actions/checkout@v2
-      
+
       - name: "Print Version"
         id: version
         run: |
           echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
           echo "::set-output name=tag::${GITHUB_REF/refs\/tags\//}"
           echo "::set-output name=platforms::linux/arm/v7,linux/arm/v6,linux/arm64,linux/386,linux/amd64"
-          
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16'
+
+      - name: Get deps
+        run: go mod vendor
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
