--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,30 +1,57 @@
-name: Docker Image Push
+name: Docker Build And Push
 
 on:
+  push:
+    branches: [ dev, master ]
   release:
     types: [ published ]
 
 jobs:
 
-  docker_build:
-    name: "build and push docker image when release"
+  setup_env:
+    name: "Setup Env"
     runs-on: ubuntu-latest
+    steps:
+
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.16
+
+  test:
+    name: "Run Test"
+    runs-on: ubuntu-latest
+    needs: [ setup_env ]
+    defaults:
+      run:
+        working-directory: ./
+    steps:
+
+      - name: Get source
+        uses: actions/checkout@v2
+
+      - name: Get deps
+        run: make deps
+
+      - name: Test
+        run: make test
+
+  build:
+    name: "build and push docker image"
+    runs-on: ubuntu-latest
+    needs: [ setup_env, test ]
     steps:
 
       - name: "Get source"
         uses: actions/checkout@v2
 
       - name: "Print Version"
-        id: version
+        id: "version"
         run: |
           echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
+          echo "::set-output name=branch::$(git branch --show-current)"
           echo "::set-output name=tag::${GITHUB_REF/refs\/tags\//}"
-          echo "::set-output name=platforms::linux/arm/v7,linux/arm/v6,linux/arm64,linux/386,linux/amd64"
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: '^1.16'
+          echo "::set-output name=platforms::linux/arm/v7,linux/arm64,linux/386,linux/amd64"
 
       - name: Get deps
         run: go mod vendor
@@ -42,9 +69,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push when push to 
+      - name: Build and push when push
         id: docker_build
         uses: docker/build-push-action@v2
+        if: contains(github.ref, "release")
+        with:
+          context: .
+          push: true
+          platforms: ${{ steps.version.outputs.platforms }}
+          tags: |
+            csust/csust-got:latest-${{ steps.version.outputs.branch }}
+
+      - name: Build and push when release
+        id: docker_build
+        uses: docker/build-push-action@v2
+        if: !contains(github.ref, "release")
         with:
           context: .
           push: true
@@ -59,12 +98,3 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-
-      - name: Docker Deployment
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          port: ${{ secrets.PORT }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          script: cd csust-got && docker-compose pull && docker-compose up -d
