--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Build and push when release
         id: docker_build
         uses: docker/build-push-action@v2
-        if: !contains(github.ref, "release")
+        if: ${{ !contains(github.ref, "release") }}
         with:
           context: .
           push: true
