--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
   deploy-release:
     name: "Release Deployment"
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' && contains(github.ref, "release")
+    if: github.event.workflow_run.conclusion == 'success' && contains(github.ref, 'release')
     steps:
 
       - name: Docker Deploy
