--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,19 @@ on:
 
 jobs:
 
+  print_info:
+    name: "Print Info"
+    runs-on: ubuntu-latest
+    if: github.event.workflow_run.conclusion == 'success'
+    steps:
+
+      - name: Print Info
+        run: echo ${{ github.ref }}
+
   deploy-dev:
     name: "Develop Deployment"
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' && github.ref == 'ref/head/dev'
+    if: github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/dev'
     steps:
 
       - name: Docker Deploy
