--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -98,3 +98,37 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.push_build.outputs.digest }}${{ steps.release_build.outputs.digest }}
+
+  deploy:
+    name: "Deployment"
+    runs-on: ubuntu-latest
+    needs: [ test, setup_env, build ]
+    steps:
+
+      - name: "Get source"
+        uses: actions/checkout@v2
+      
+      - name: "Print Version"
+        id: "version"
+        run: |
+          echo "::set-output name=branch::$(git branch --show-current)"
+
+      - name: Develop Deployment
+        uses: appleboy/ssh-action@master
+        if: steps.version.outputs.branch == 'dev'
+        with:
+          host: ${{ secrets.HOST_DEV }}
+          port: ${{ secrets.PORT_DEV }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: cd survey && docker-compose pull && docker-compose up -d
+      
+      - name: Release Deployment
+        uses: appleboy/ssh-action@master
+        if: contains(github.ref, 'release')
+        with:
+          host: ${{ secrets.HOST }}
+          port: ${{ secrets.PORT }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: cd survey && docker-compose pull && docker-compose up -d
