--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Docker Build And Push
+name: Docker Build And Deployment
 
 on:
   push:
@@ -37,15 +37,15 @@ jobs:
         run: make test
 
   build:
-    name: "build and push docker image"
+    name: "Build And Push"
     runs-on: ubuntu-latest
     needs: [ setup_env, test ]
     steps:
 
-      - name: "Get source"
+      - name: Get source
         uses: actions/checkout@v2
 
-      - name: "Print Version"
+      - name: Print version
         id: "version"
         run: |
           echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
@@ -56,10 +56,10 @@ jobs:
       - name: Get deps
         run: go mod vendor
 
-      - name: Set up QEMU
+      - name: Setup QEMU
         uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
+      - name: Setup Docker Buildx
         id: setup-buildx
         uses: docker/setup-buildx-action@v1
 
@@ -105,10 +105,10 @@ jobs:
     needs: [ test, setup_env, build ]
     steps:
 
-      - name: "Get source"
+      - name: Get source
         uses: actions/checkout@v2
       
-      - name: "Print Version"
+      - name: Print version
         id: "version"
         run: |
           echo "::set-output name=branch::$(git branch --show-current)"
@@ -121,7 +121,7 @@ jobs:
           port: ${{ secrets.PORT_DEV }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
-          script: cd survey && docker-compose pull && docker-compose up -d
+          script: cd csust-got && docker-compose pull && docker-compose up -d
       
       - name: Release Deployment
         uses: appleboy/ssh-action@master
@@ -131,4 +131,4 @@ jobs:
           port: ${{ secrets.PORT }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
-          script: cd survey && docker-compose pull && docker-compose up -d
+          script: cd csust-got && docker-compose pull && docker-compose up -d
