--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -64,7 +64,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -72,7 +72,7 @@ jobs:
       - name: Build and push when push
         id: push_build
         uses: docker/build-push-action@v2
-        if: "!contains(github.ref, 'release')"
+        if: startsWith(github.ref, 'refs/tags/v') == false
         with:
           context: .
           push: true
@@ -83,7 +83,7 @@ jobs:
       - name: Build and push when release
         id: release_build
         uses: docker/build-push-action@v2
-        if: contains(github.ref, 'release')
+        if: startsWith(github.ref, 'refs/tags/v')
         with:
           context: .
           push: true
@@ -115,7 +115,7 @@ jobs:
 
       - name: Develop Deployment
         uses: appleboy/ssh-action@master
-        if: steps.version.outputs.branch == 'dev'
+        if: steps.version.outputs.branch == 'dev' && startsWith(github.ref, 'refs/tags/v') == false
         with:
           host: ${{ secrets.HOST_DEV }}
           port: ${{ secrets.PORT_DEV }}
@@ -125,7 +125,7 @@ jobs:
       
       - name: Release Deployment
         uses: appleboy/ssh-action@master
-        if: contains(github.ref, 'release')
+        if: startsWith(github.ref, 'refs/tags/v')
         with:
           host: ${{ secrets.HOST }}
           port: ${{ secrets.PORT }}
