--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,30 +2,25 @@ name: Test
 
 on:
   push:
-    branches-ignore: 
+    branches:
       - dev
       - master
+  pull_request:
 
 jobs:
 
-  setup_env:
-    name: "Setup Env"
+  test:
+    name: "Run Test"
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./
     steps:
 
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
           go-version: ^1.17
-
-  test:
-    name: "Run Test"
-    runs-on: ubuntu-latest
-    needs: [ setup_env ]
-    defaults:
-      run:
-        working-directory: ./
-    steps:
 
       - name: Get source
         uses: actions/checkout@v2
