--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Docker Build And Deployment
+name: Docker Build
 
 on:
   push:
@@ -77,38 +77,3 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.push_build.outputs.digest }}${{ steps.release_build.outputs.digest }}
-
-  deploy:
-    name: "Deployment"
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
-
-      - name: Get source
-        uses: actions/checkout@v2
-      
-      - name: Print version
-        id: "version"
-        run: |
-          echo "::set-output name=branch::$(git branch --show-current)"
-
-      - name: Develop Deployment
-        uses: appleboy/ssh-action@master
-        if: steps.version.outputs.branch == 'dev' && startsWith(github.ref, 'refs/tags/v') == false
-        with:
-          host: ${{ secrets.HOST_DEV }}
-          port: ${{ secrets.PORT_DEV }}
-          username: ${{ secrets.USERNAME_DEV }}
-          key: ${{ secrets.PRIVATE_KEY_DEV }}
-          script: cd csust-got && docker-compose pull && docker-compose up -d
-      
-      - name: Release Deployment
-        uses: appleboy/ssh-action@master
-        if: startsWith(github.ref, 'refs/tags/v')
-        with:
-          host: ${{ secrets.HOST }}
-          port: ${{ secrets.PORT }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          script: cd csust-got && docker-compose pull && docker-compose up -d
