--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,35 @@ on:
 
 jobs:
 
+  test:
+    name: "Run Test"
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./
+    steps:
+
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.17
+
+      - name: Get source
+        uses: actions/checkout@v2
+
+      - name: Get deps
+        run: make deps
+
+      - name: Test
+        run: make test
+
+
   build:
     name: "Build And Push"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [linux/arm/v7, linux/arm64, linux/386, linux/amd64]
     steps:
 
       - name: Setup Go
@@ -55,7 +81,7 @@ jobs:
         with:
           context: .
           push: true
-          platforms: ${{ steps.version.outputs.platforms }}
+          platforms: ${{ matrix.platform }}
           tags: |
             csust/csust-got:latest-${{ steps.version.outputs.branch }}
 
@@ -66,7 +92,7 @@ jobs:
         with:
           context: .
           push: true
-          platforms: ${{ steps.version.outputs.platforms }}
+          platforms: ${{ matrix.platform }}
           tags: |
             csust/csust-got:latest
             csust/csust-got:${{ steps.version.outputs.tag }}
@@ -77,3 +103,47 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.push_build.outputs.digest }}${{ steps.release_build.outputs.digest }}
+
+
+  deploy:
+    name: "Deployment"
+    runs-on: ubuntu-latest
+    needs: [ test, build ]
+    steps:
+
+      - name: Get source
+        uses: actions/checkout@v2
+      
+      - name: Print version
+        id: "version"
+        run: |
+          echo "::set-output name=branch::$(git branch --show-current)"
+
+      - name: Wait for tests to succeed
+        uses: lewagon/wait-on-check-action@v1.1.1
+        with:
+          ref: ${{ github.ref }}
+          check-name: Test
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
+          allowed-conclusions: success
+
+      - name: Develop Deployment
+        uses: appleboy/ssh-action@master
+        if: steps.version.outputs.branch == 'dev' && startsWith(github.ref, 'refs/tags/v') == false
+        with:
+          host: ${{ secrets.HOST_DEV }}
+          port: ${{ secrets.PORT_DEV }}
+          username: ${{ secrets.USERNAME_DEV }}
+          key: ${{ secrets.PRIVATE_KEY_DEV }}
+          script: cd csust-got && docker-compose pull && docker-compose up -d
+      
+      - name: Release Deployment
+        uses: appleboy/ssh-action@master
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          host: ${{ secrets.HOST }}
+          port: ${{ secrets.PORT }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: cd csust-got && docker-compose pull && docker-compose up -d
