--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,18 +1,15 @@
-name: Docker Build
+name: Push Build
 
 on:
   push:
     branches:
       - dev
       - master
-  release:
-    types:
-      - published
 
 jobs:
 
   test:
-    name: "Run Test"
+    name: Test
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -35,11 +32,23 @@ jobs:
 
 
   build:
-    name: "Build And Push"
+    name: Build
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [linux/arm/v7, linux/arm64, linux/386, linux/amd64]
+        include:
+          - platform: linux/amd64
+            goarch: amd64
+            goarm:
+          - platform: linux/386
+            goarch: 386
+            goarm:
+          - platform: linux/arm64
+            goarch: arm64
+            goarm:
+          - platform: linux/arm/v7
+            goarch: arm
+            goarm: 7
     steps:
 
       - name: Setup Go
@@ -55,17 +64,14 @@ jobs:
         run: |
           echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
           echo "::set-output name=branch::$(git branch --show-current)"
-          echo "::set-output name=tag::${GITHUB_REF/refs\/tags\//}"
-          echo "::set-output name=platforms::linux/arm/v7,linux/arm64,linux/386,linux/amd64"
 
-      - name: Get deps
-        run: go mod vendor
+      - name: Build bot
+        run: GOARCH=${{ matrix.goarch }} GOARM=${{ matrix.goarm }} make deploy
 
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v1
 
       - name: Setup Docker Buildx
-        id: setup-buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
@@ -74,10 +80,8 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push when push
-        id: push_build
+      - name: Build and push
         uses: docker/build-push-action@v2
-        if: startsWith(github.ref, 'refs/tags/v') == false
         with:
           context: .
           push: true
@@ -85,28 +89,9 @@ jobs:
           tags: |
             csust/csust-got:latest-${{ steps.version.outputs.branch }}
 
-      - name: Build and push when release
-        id: release_build
-        uses: docker/build-push-action@v2
-        if: startsWith(github.ref, 'refs/tags/v')
-        with:
-          context: .
-          push: true
-          platforms: ${{ matrix.platform }}
-          tags: |
-            csust/csust-got:latest
-            csust/csust-got:${{ steps.version.outputs.tag }}
-          build-args: |
-            TAG=${{ steps.version.outputs.tag }}
-            BRANCH=release
-            RELEASE=release
-
-      - name: Image digest
-        run: echo ${{ steps.push_build.outputs.digest }}${{ steps.release_build.outputs.digest }}
-
 
   deploy:
-    name: "Deployment"
+    name: Deployment
     runs-on: ubuntu-latest
     needs: [ test, build ]
     steps:
@@ -119,31 +104,12 @@ jobs:
         run: |
           echo "::set-output name=branch::$(git branch --show-current)"
 
-      - name: Wait for tests to succeed
-        uses: lewagon/wait-on-check-action@v1.1.1
-        with:
-          ref: ${{ github.ref }}
-          check-name: Test
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
-          allowed-conclusions: success
-
-      - name: Develop Deployment
+      - name: Deployment
         uses: appleboy/ssh-action@master
-        if: steps.version.outputs.branch == 'dev' && startsWith(github.ref, 'refs/tags/v') == false
+        if: steps.version.outputs.branch == 'dev'
         with:
           host: ${{ secrets.HOST_DEV }}
           port: ${{ secrets.PORT_DEV }}
           username: ${{ secrets.USERNAME_DEV }}
           key: ${{ secrets.PRIVATE_KEY_DEV }}
-          script: cd csust-got && docker-compose pull && docker-compose up -d
-      
-      - name: Release Deployment
-        uses: appleboy/ssh-action@master
-        if: startsWith(github.ref, 'refs/tags/v')
-        with:
-          host: ${{ secrets.HOST }}
-          port: ${{ secrets.PORT }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
           script: cd csust-got && docker-compose pull && docker-compose up -d
