--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: Push Build
+name: Build And Deploy
 
 on:
   push:
@@ -34,42 +34,14 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - platform: linux/amd64
-            goarch: amd64
-            goarm:
-          - platform: linux/386
-            goarch: 386
-            goarm:
-          - platform: linux/arm64
-            goarch: arm64
-            goarm:
-          - platform: linux/arm/v7
-            goarch: arm
-            goarm: 7
     steps:
-
-      - name: Setup Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.17
 
       - name: Get source
         uses: actions/checkout@v2
 
       - name: Print version
         id: "version"
-        run: |
-          echo "Version:" $(git branch --show-current)-$(git rev-parse --short HEAD)
-          echo "::set-output name=branch::$(git branch --show-current)"
-
-      - name: Build bot
-        run: GOARCH=${{ matrix.goarch }} GOARM=${{ matrix.goarm }} make deploy
-
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v1
+        run: echo "::set-output name=sha::$(git rev-parse --short HEAD)"
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -85,28 +57,23 @@ jobs:
         with:
           context: .
           push: true
-          platforms: ${{ matrix.platform }}
+          platforms: linux/arm/v7,linux/arm64,linux/386,linux/amd64
           tags: |
-            csust/csust-got:latest-${{ steps.version.outputs.branch }}
+            csust/csust-got:latest-${{ github.ref_name }}
+          build-args: |
+            TAG=${{ steps.version.outputs.sha }}
+            BRANCH=${{ github.ref_name }}
 
 
   deploy:
     name: Deployment
     runs-on: ubuntu-latest
     needs: [ test, build ]
+    if: github.ref_name == 'dev'
     steps:
-
-      - name: Get source
-        uses: actions/checkout@v2
-      
-      - name: Print version
-        id: "version"
-        run: |
-          echo "::set-output name=branch::$(git branch --show-current)"
 
       - name: Deployment
         uses: appleboy/ssh-action@master
-        if: steps.version.outputs.branch == 'dev'
         with:
           host: ${{ secrets.HOST_DEV }}
           port: ${{ secrets.PORT_DEV }}
