--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,27 +7,14 @@ on:
 
 jobs:
 
+  lint:
+    name: Lint
+    uses: CSUSTers/csust-got/.github/workflows/lint.yml@master
+
+
   test:
     name: Test
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./
-    steps:
-
-      - name: Setup Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.17
-
-      - name: Get source
-        uses: actions/checkout@v2
-
-      - name: Get deps
-        run: make deps
-
-      - name: Test
-        run: make test
+    uses: CSUSTers/csust-got/.github/workflows/test.yml@master
 
 
   build:
