--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -136,7 +136,7 @@ linters-settings:
     # By default list of stable checks is used.
     enabled-checks:
       - nestingReduce
-      - unnamedresult
+      # - unnamedresult
       - ruleguard
       - truncateCmp
 
