--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -135,7 +135,7 @@ linters-settings:
     # By default list of stable checks is used.
     enabled-checks:
       - nestingReduce
-      - unnamedresult
+      # - unnamedresult
       - ruleguard
       - truncateCmp
 
