--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -382,7 +382,7 @@ linters-settings:
     warning-code: 0
     rules:
       - name: atomic
-      - name: bare-return
+        # - name: bare-return
       - name: blank-imports
       - name: bool-literal-in-expr
       - name: cognitive-complexity
