feat: add heap test

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -588,6 +588,7 @@ issues:
     # Exclude some linters from running on tests files.
     - path: _test\.go
       linters:
+        - revive
         - errcheck
         - dupl
         - gosec
