--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -136,15 +136,15 @@ linters-settings:
     # By default list of stable checks is used.
     enabled-checks:
       - nestingReduce
-      # - unnamedresult
       - ruleguard
       - truncateCmp
+      # - unnamedresult
 
     # Which checks should be disabled; can't be combined with 'enabled-checks'; default is empty
-    disabled-checks:
-      - regexpMust
-      - hugeParam
-      - rangeValCopy
+    # disabled-checks:
+      # - regexpMust
+      # - hugeParam
+      # - rangeValCopy
 
     # Enable multiple checks by tags, run `GL_DEBUG=gocritic golangci-lint run` to see all tags and checks.
     # Empty list by default. See https://github.com/go-critic/go-critic#usage -> section "Tags".
@@ -352,7 +352,7 @@ linters-settings:
     # Enable strict mode will also include the errors caused by failing to parse the args.
     strict: false
     # Please refer to https://github.com/yeya24/promlinter#usage for detailed usage.
-    disabled-linters:
+    # disabled-linters:
     #  - "Help"
     #  - "MetricUnits"
     #  - "Counter"
@@ -532,7 +532,6 @@ linters-settings:
 linters:
   enable:
     - bidichk
-    - bodyclose
     - depguard
     - dupl
     - durationcheck
@@ -554,19 +553,21 @@ linters:
     - ifshort
     - nakedret
     - nestif
-    - noctx
     - nolintlint
     - prealloc
     - predeclared
     - revive
-    - rowserrcheck
-    - sqlclosecheck
-    - stylecheck
     - tenv
-    - tparallel
     - unconvert
-    - unparam
-    - wastedassign
+    # disabled by not supported in go
+    # - bodyclose
+    # - noctx
+    # - rowserrcheck
+    # - sqlclosecheck
+    # - stylecheck
+    # - tparallel
+    # - unparam
+    # - wastedassign
     - whitespace
   disable:
     - typecheck
