--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -141,10 +141,10 @@ linters-settings:
       # - unnamedresult
 
     # Which checks should be disabled; can't be combined with 'enabled-checks'; default is empty
-    # disabled-checks:
-      # - regexpMust
-      # - hugeParam
-      # - rangeValCopy
+    disabled-checks:
+      - regexpMust
+      - hugeParam
+      - rangeValCopy
 
     # Enable multiple checks by tags, run `GL_DEBUG=gocritic golangci-lint run` to see all tags and checks.
     # Empty list by default. See https://github.com/go-critic/go-critic#usage -> section "Tags".
