--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -365,7 +365,7 @@ linters-settings:
       - name: confusing-results
       - name: constant-logical-expr
       - name: context-as-argument
-      - name: context-keys-type
+      # - name: context-keys-type
       - name: cyclomatic
         arguments: [8]
       - name: defer
@@ -374,7 +374,7 @@ linters-settings:
       - name: error-naming
       - name: error-return
       - name: error-strings
-      - name: errorf
+      # - name: errorf
       - name: exported
       - name: function-length
         arguments: [40, 200]
@@ -388,16 +388,16 @@ linters-settings:
         #- name: optimize-operands-order
       - name: range
       - name: range-val-in-closure
-      - name: range-val-address
+      # - name: range-val-address
       - name: receiver-naming
       - name: redefines-builtin-id
-      - name: string-of-int
+      # - name: string-of-int
       - name: string-format
       - name: struct-tag
       - name: superfluous-else
         #- name: time-equal
-      - name: var-declaration
-      - name: unhandled-error
+      # - name: var-declaration
+      # - name: unhandled-error
       - name: unnecessary-stmt
       - name: unreachable-code
       - name: useless-break
@@ -504,8 +504,9 @@ linters:
     - revive
     - tenv
     - unconvert
-    - bodyclose
-    - noctx
+    # disabled by not supported in go
+    # - bodyclose
+    # - noctx
     # - rowserrcheck
     # - sqlclosecheck
     - stylecheck
